test/neg/neg-serial13.errc
Template argument of read must be Serializable.
Cannot return array type from read -- use read_into or read_sequence_into instead.
